--- a/tree/CMakeLists.txt
+++ b/tree/CMakeLists.txt
@@ -1,2 +1,5 @@
-#测试顺序存储二叉树
-add_executable(test_seqbinarytree test_seqbinarytree.cpp)
+#测试基础二叉树
+add_executable(test_basebinarytree test_basebinarytree.cpp)
+
+#测试哈夫曼树
+add_executable(test_huffmantree test_huffmantree.cpp)
